2006-05-08  Atsushi Enomoto  <atsushi@ximian.com>

	* AsyncOperation.cs : SynchronizationContext.OperationStarted()
	  should not be called more than once. So move it from Post() to
	  .ctor(). Thanks again to cl.

2006-05-08  Atsushi Enomoto  <atsushi@ximian.com>

	* AsyncOperation.cs : call OperationStared() at Post(). Call
	  OperationCompleted() at the finalizer. Thanks to cl.

2006-05-08  Atsushi Enomoto  <atsushi@ximian.com>

	* SettingsBindableAttribute.cs : new file. Bug #78333 is fixed.

2006-04-27  Miguel de Icaza  <miguel@novell.com>

	* Component.cs: The converter for the Component is
	ComponentConverter, which makes the GetPropertiesSupported return
	true.   So JChamber's patch should work now.

2006-04-26  Miguel de Icaza  <miguel@novell.com>

	* TypeDescriptor.cs (Info.GetProperties, TypeInfo.GetProperties):
	Use the more specific GetProperties call so we do not return
	static properties, should fix that part of the PropertyGrid bug
	#78192.

	Code formatting police hit again.

	* ReflectionPropertyDescriptor.cs (CanResetvalue): Do not
	dereference a null value, avoids crash in property grid.

	Code formatting police. 

2006-04-25  Miguel de Icaza  <miguel@novell.com>

	* TypeConverter.cs (ConvertFrom): Do not crash if we are passed a
	null value. 

2006-04-25  Atsushi Enomoto  <atsushi@ximian.com>

	* BaseNumberConverter.cs : (ConvertTo) regardless of InnerType,
	  it converts the argument value to InnerType using supplied format.
	  (It might be not limited to NET_2_0 but it's too cosmetic to dig
	  into the problem. At least this is for run-test-ondotnet fixes.)

2006-04-17  Atsushi Enomoto  <atsushi@ximian.com>

	* BackgroundWorker.cs, RunWorkerCompletedEventArgs.cs :
	  cosmetic attribute fixes.

2006-04-17  Atsushi Enomoto  <atsushi@ximian.com>

	* AsyncOperation.cs,
	  AsyncOperationManager.cs
	  BackgroundWorker.cs
	  DoWorkEventArgs.cs
	  DoWorkEventHandler.cs
	  RunWorkerCompletedEventArgs.cs
	  RunWorkerCompletedEventHandler.cs :